# agent-platform

./: .env.stripe.template  .gitignore  AGENT_CREATION_GUIDE.md  AGENT_INGESTION_README.md  ARCHITECTURE.md  ARCHITECTURE_2.0.md  ARCHITECTURE_MCP.md  BILLING_IMPLEMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  DevelopmentJournal.md  DevelopmentJournal_Workflows.md  EXECUTION_LOG.md  EXECUTIVE_SUMMARY.md  HANDOFF.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INTEGRATION_PROGRESS.md  LANDING_PAGE_COPY.md  LICENSE  MASTER_PLAN.md  MCP-PROJECT-MANAGEMENT.instructions.md  MCP_IMPLEMENTATION.md  OLD_README.md  PILOT_OUTREACH_STRATEGY.md  PLATFORM_ARCHITECTURE.md  PRODUCTION_READINESS_REPORT.md  PROJECT_STATUS.md  QUICKSTART_SOTA.md  README.md  REVENUE_SPRINT_SUMMARY.md  REVENUE_STRATEGY.md  SESSION_SUMMARY.md  SKILLS_V2_ARCHITECTURE.md  STATUS_HOUR_3_COMPLETE.md  STATUS_HOUR_4_COMPLETE.md  TASKS.md  (+15 more)
.github/: BuildingSuccessfulApps.md  copilot-instructions.md  copilot-instructions.old1.md
agent-platform/apps/api/: auth.py  auth_advanced.py  auth_simple.py  main.py  models.py  platforms.py  pyproject.toml  requirements.txt  test_imports.py
agent-platform/apps/api/app/: __init__.py  main.py
agent-platform/apps/api/app/agents/: website_builder.py
agent-platform/apps/api/app/api/v1/: agents.py  executions.py  security.py
agent-platform/apps/api/app/auth/: api_key_auth.py  rate_limiting.py
agent-platform/apps/api/app/billing/: models.py  stripe_client.py  subscription.py  webhooks.py
agent-platform/apps/api/app/core/: config.py
agent-platform/apps/api/app/evaluation/: auto_dataset_generator.py  memory_evaluator.py  ood_testing.py
agent-platform/apps/api/app/execution/: artifact_channel.py
agent-platform/apps/api/app/optimization/: island_evolution.py  meta_prompt.py
agent-platform/apps/api/app/payments/: payment_service.py
agent-platform/apps/api/app/protocols/: mcp_adapter.py  multi_protocol.py
agent-platform/apps/api/app/routers/: billing.py
agent-platform/apps/api/app/services/agent_execution/: __init__.py  engine.py
agent-platform/apps/api/app/services/agent_execution/adapters/: __init__.py  base_adapter.py  crewai_adapter.py  langchain_adapter.py  mcp_adapter.py
agent-platform/apps/api/app/services/parsers/: multi_format_parser.py
agent-platform/apps/api/app/services/security/: __init__.py  scanner.py
agent-platform/apps/api/auth/: auth_system.py
agent-platform/apps/api/database/: models.py
agent-platform/apps/api/documents/: __init__.py  routes.py
agent-platform/apps/api/llm/: __init__.py  provider_data.py  providers.py
agent-platform/apps/api/sample_agents/: README.md
agent-platform/apps/api/telemetry/: __init__.py  collector.py  routes.py
agent-platform/apps/api/tests/: test_api.py
agent-platform/apps/api/workflows/: __init__.py  executor.py  routes.py
(+993 files in other folders)
