[tool.poetry]
name = "ai-agent-marketplace"
version = "1.0.0"
description = "The world's first competitive AI agent marketplace with evolutionary optimization"
authors = ["AI Agent Marketplace Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/ai-agent-marketplace"
repository = "https://github.com/yourusername/ai-agent-marketplace"
keywords = ["ai", "agents", "marketplace", "evolution", "optimization"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
dataclasses-json = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
mypy = "^1.5.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
